--- a/aws-networking/ansible_templates/jenkins_worker.yaml
+++ b/aws-networking/ansible_templates/jenkins_worker.yaml
@@ -76,6 +76,16 @@
         master: "{{ master_ip }}"
       shell: "cat /home/ec2-user/creds.xml | java -jar /home/ec2-user/jenkins-cli.jar -auth @/home/ec2-user/jenkins_auth -s http://{{master}}:8080 create-credentials-by-xml system::system::jenkins _"
 
+    - name: Copy deregistration shell script
+      vars:
+        master: "{{ master_ip }}"
+        ipv4: "{{ ansible_default_ipv4.address }}"
+      template:
+        src: deregister.sh.j2
+        dest: /home/ec2-user/deregister.sh
+        owner: ec2-user
+        mode: 0500
+
     - name: Register node as worker
       vars:
         master: "{{ master_ip }}"
