feat: add a terraform module to run a Jenkins master-workers setup for high availability
This is the first commit of the new module to run a highliy available setup for Jenkins with master and worker nodes.

--- a/aws_jenkins_master_workers_modules/Makefile
+++ b/aws_jenkins_master_workers_modules/Makefile
@@ -21,7 +21,12 @@ go-test:
 .PHONY: test
 test: go-test clean
 
+.PHONY: fmt
+fmt:
+	$(call tf-format)
+
 
 # define helper functions
 rm-command = rm -rf ${1}
 go-test = cd test/ && go test -v
+tf-format = terraform fmt -recursive
